--- a/requirements.txt
+++ b/requirements.txt
@@ -3,11 +3,13 @@
 # Web Framework
 Flask==3.0.0
 Flask-SQLAlchemy==3.1.1
-Flask-Migrate
+Flask-Migrate==4.0.7
+Flask-WTF==1.2.2
+Flask-Login==0.6.3
 
 # Database
 SQLAlchemy==2.0.23
-psycopg2-binary
+psycopg2-binary==2.9.10
 
 # Excel Processing
 pandas==2.1.3
@@ -17,4 +19,7 @@ openpyxl==3.1.2
 Werkzeug==3.0.1
 
 # WSGI server
-gunicorn
+gunicorn==21.2.0
+
+# Monitoring
+sentry-sdk==2.22.0
